[package]
name = "rumcake-{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-abort = "0.3.2"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }

rumcake = { git = "https://github.com/Univa/rumcake", rev = "3b72522", features = ["stm32f303cb", "via", "underglow-driver-ws2812-bitbang"] }

[build-dependencies]
rust-lzma = "0.6.0"
json = "0.12.4"
quote = "1.0.32"
proc-macro2 = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"

[profile.release]
debug = 2
lto = true
