[package]
name = "rumcake-{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-abort = "0.3.2"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38" }

rumcake = { git = "https://github.com/Univa/rumcake", rev = "7e0c07d", features = ["usb", "stm32f303cb", "drivers", "vial", "underglow"] }

[profile.release]
debug = 2
lto = true
