[package]
name = "rumcake-{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }

rumcake = { path = "../rumcake", features = ["nrf52840", "split-driver-ble", "nrf-ble"] }

[profile.dev]
debug = 2

[profile.release]
debug = 2
lto = true

# Split keyboard example
[[bin]]
name = "left"
path = "src/left.rs"
required-features = ["rumcake/split-central", "rumcake/bluetooth", "rumcake/usb"]

[[bin]]
name = "right"
path = "src/right.rs"
required-features = ["rumcake/split-peripheral"]
